[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/ui/shop/Shop.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
extra_spacing_char = 3
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 36
extra_spacing_char = 3
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 29
extra_spacing_char = 3
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
extra_spacing_char = 3
font_data = SubResource( 9 )

[node name="Shop" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 551.0
custom_constants/separation = 12

[node name="BackButton" type="Button" parent="VBox"]
margin_left = 914.0
margin_right = 974.0
margin_bottom = 26.0
size_flags_horizontal = 8
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "back"
flat = true

[node name="ShopVBox" type="VBoxContainer" parent="VBox"]
margin_top = 38.0
margin_right = 974.0
margin_bottom = 359.0
custom_constants/separation = 52

[node name="ShopCenter" type="CenterContainer" parent="VBox/ShopVBox"]
margin_right = 974.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/ShopVBox/ShopCenter"]
margin_left = 431.0
margin_right = 542.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "SHOP"

[node name="ItemsCenter" type="CenterContainer" parent="VBox/ShopVBox"]
margin_top = 97.0
margin_right = 974.0
margin_bottom = 321.0

[node name="ItemsVBox" type="VBoxContainer" parent="VBox/ShopVBox/ItemsCenter"]
margin_left = 76.0
margin_right = 897.0
margin_bottom = 224.0

[node name="Items" type="GridContainer" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox"]
margin_right = 821.0
margin_bottom = 224.0
custom_constants/vseparation = 12
custom_constants/hseparation = 56
columns = 4

[node name="ConsumablesLabel" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_right = 423.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.972549, 0.686275, 1 )
text = "Consumables"

[node name="PriceLabel" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 479.0
margin_right = 567.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.972549, 0.686275, 1 )
text = "Price"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StockLabel" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 623.0
margin_right = 718.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.972549, 0.686275, 1 )
text = "Stock"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 774.0
margin_top = 11.0
margin_right = 821.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RageMode" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_top = 51.0
margin_right = 423.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 10 )
text = "Rage Mode (unlimited Ammo for 10sec)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RageModePrice" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 479.0
margin_top = 51.0
margin_right = 567.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 6 )
text = "242"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RageModeStock" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 623.0
margin_top = 51.0
margin_right = 718.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RageModeBuy" type="Button" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 774.0
margin_top = 48.0
margin_right = 821.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "buy"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_top = 86.0
margin_right = 423.0
margin_bottom = 100.0

[node name="HSeparator" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 479.0
margin_top = 86.0
margin_right = 567.0
margin_bottom = 100.0

[node name="HSeparator3" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 623.0
margin_top = 86.0
margin_right = 718.0
margin_bottom = 100.0

[node name="HSeparator4" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 774.0
margin_top = 86.0
margin_right = 821.0
margin_bottom = 100.0

[node name="UpgradesLabel" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_top = 112.0
margin_right = 423.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.972549, 0.686275, 1 )
text = "Upgrades"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler2" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 479.0
margin_top = 123.0
margin_right = 567.0
margin_bottom = 137.0

[node name="Filler3" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 623.0
margin_top = 123.0
margin_right = 718.0
margin_bottom = 137.0

[node name="Filler4" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 774.0
margin_top = 123.0
margin_right = 821.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoIncLabel" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_top = 163.0
margin_right = 423.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 10 )
text = "Ammo increase +1 every 10sec"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoIncPrice" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 479.0
margin_top = 163.0
margin_right = 567.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 10 )
text = "2000"
align = 1

[node name="AmmoIncStock" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 623.0
margin_top = 163.0
margin_right = 718.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1

[node name="AmmoIncButton" type="Button" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 774.0
margin_top = 160.0
margin_right = 821.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "buy"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalMovement" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_top = 201.0
margin_right = 423.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 10 )
text = "enable vertical movement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalMovementPrice" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 479.0
margin_top = 201.0
margin_right = 567.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 10 )
text = "420"
align = 1

[node name="VerticalMovementStock" type="Label" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 623.0
margin_top = 201.0
margin_right = 718.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1

[node name="VerticalMovementButton" type="Button" parent="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items"]
margin_left = 774.0
margin_top = 198.0
margin_right = 821.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "buy"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupNotification" type="AcceptDialog" parent="VBox/ShopVBox/ItemsCenter"]
margin_left = 357.0
margin_top = 83.0
margin_right = 617.0
margin_bottom = 141.0
window_title = ""
dialog_text = "You have not enough Score to buy this"
[connection signal="pressed" from="VBox/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items/RageModeBuy" to="." method="buy_item" binds= [ "RageMode" ]]
[connection signal="pressed" from="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items/AmmoIncButton" to="." method="buy_item" binds= [ "AmmoIncrease" ]]
[connection signal="pressed" from="VBox/ShopVBox/ItemsCenter/ItemsVBox/Items/VerticalMovementButton" to="." method="buy_item" binds= [ "VerticalMovement" ]]
